syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.loopring.lightcone.proto";
package org.loopring.lightcone.proto;

import "order.proto";

message Ring {
    repeated int32 order_idx = 1;
}
message Rings {
    string fee_recipient = 1;
    string miner = 2;
    string sig = 3;
    repeated Ring rings = 4;
    repeated RawOrder orders = 5;
    string sign_algorithm = 6;
    string hash = 7;
    string transaction_origin = 8; // 平时可以忽略
}

message RingToSettle {
    Ring ring = 1;
    string submitter = 2;
    string gas_price = 3;
    string gas_pimit = 4;
}

message RingToSettleSeq {
    repeated RingToSettle rings = 1;
}

message GetRingsReq {}
message GetRingsResp {}

message GetFinderRingCandidates {}

message GetTransactionPendingRings {}
message MatchingSystemReport {}

message GetRingCandidates {
}
message RingCandidates {
    repeated Ring rings = 1;
}

enum SettlementDecision {
    Unknown = 0;
    Settled = 1;
    UnSettled = 2;
}
message RingSettlementDecision {
    string ring_hash = 1;
    SettlementDecision decision = 2;
    repeated OrderSettling orders_settling = 3;
}
message NotifyRingSettlementDecisions {
    repeated RingSettlementDecision ringSettlementDecisions = 1;
}



